fixed dot sliders on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ h2 {
   z-index: 1;
 }
 
+.slick-dots {
+  position: initial;
+}
+
 .answerPercent {
   font-size: 116px;
 }
